--- a/.gitignore
+++ b/.gitignore
@@ -102,4 +102,6 @@ local.properties
 # Spring Boot Tooling
 .sts4-cache/
 
+.metadata/
+
 # End of https://www.toptal.com/developers/gitignore/api/eclipse
